[package]
name = "websocket"
version = "0.0.0"
authors = ["nhoj <john@nhoj.info>"]
edition = "2018"
description = "Xous Websocket service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xous = { path = "../../xous-rs" }
log-server = { path = "../log-server" }
xous-names = { path = "../xous-names" }
log = "0.4.14"
num-derive = {version = "0.3.3", default-features = false}
num-traits = {version = "0.2.14", default-features = false}

[target.'cfg(not(any(windows,unix)))'.dependencies]
utralib = { path = "../../utralib"}

[features]
default = []
